# KG-Eval

./: FRAMEWORK_DESIGN-zh.md  FRAMEWORK_DESIGN.md  LICENSE  README-zh.md  README.md  env.template  pyproject.toml  sample_kg_evaluation_report.json
examples/: README.md  api_demo.py  base_url_example.py  cli_demo.sh  cli_report.json  sample_kg_mini.json  sample_report.json  sample_usage.py  test_config.json
src/kg_eval/: __init__.py  base_evaluator.py  cli.py  data_objects.py  evaluator.py  llm_referee.py  report_generator.py
src/kg_eval/dimensions/: __init__.py  efficiency.py  scale_richness.py  semantic_quality.py  structural_integrity.py
